--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
     const localVector4 = new THREE.Vector3();
     const localVector5 = new THREE.Vector3();
     const localQuaternion = new THREE.Quaternion();
+    const localQuaternion2 = new THREE.Quaternion();
     const localEuler = new THREE.Euler();
     localEuler.order = 'YXZ';
     const localEuler2 = new THREE.Euler();
     localEuler2.order = localEuler.order;
+    const localMatrix = new THREE.Matrix4();
 
     const camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 0.1, 10 * 1024);
     camera.position.set(0, DEFAULT_USER_HEIGHT, 1);
@@ -283,11 +285,27 @@
         console.warn('mp error', e.error);
       };
       xrmp.onplayerenter = playerMesh => {
-        const skinMesh = _makeSkinMesh(playerMesh);
+        const skinMesh = _makeSkinMesh();
         playerMesh.add(skinMesh);
 
+        playerMesh.onupdate = () => {
+          skinMesh.update(playerMesh.hmd, playerMesh.gamepads);
+        };
         playerMesh.player.onstateupdate = e => {
           const {state} = e;
+          const {username} = (state._exokit || {});
+
+          if (username) {
+            xrid.get('_exokit.skin', {
+              user: username,
+              format: 'text',
+            })
+              .then(skinUrl => {
+                skinMesh.setSkinUrl(skinUrl);
+              });
+          } else {
+            skinMesh.setSkinUrl(null);
+          }
           console.log('player state update', {state}); // XXX set the skin here
         };
 
@@ -344,16 +362,12 @@
       })
         .then(newUser => {
           user = newUser;
+
           menuMesh.urlMesh.updateText();
 
           return Promise.all([
             xrid.get('_exokit.skin', 'text')
-              .then((skinUrl = DEFAULT_SKIN_URL) => _requestSkinPreviewCanvas(skinUrl))
-              .then(canvas => {
-                skinPreviewCanvas = canvas;
-
-                menuMesh.urlMesh.updateText();
-              }),
+              .then(skinUrl => localSkinMesh.setSkinUrl(skinUrl)),
             xrid.getFiles()
               .then(newFiles => {
                 files = newFiles;
@@ -361,6 +375,13 @@
                 menuMesh.urlMesh.updateText();
               }),
           ]);
+
+          /* _requestSkinPreviewCanvas(skinUrl)
+            .then(canvas => {
+              skinPreviewCanvas = canvas;
+
+              menuMesh.urlMesh.updateText();
+            }) */
         })
         .catch(err => {
           console.warn(err.stack);
@@ -718,165 +739,184 @@
     scene.add(floorMesh);
 
     const animations = [];
-
     const _mod = (v, d) => {
       const n = v % d;
       return n < 0 ? (d + n) : n;
     };
     const _angleDiff = (a, b) => _mod((b - a) + Math.PI, Math.PI * 2) - Math.PI;
-    const _makeSkinMesh = playerMesh => {
-      const mesh = skin({
-        limbs: true,
-      });
+    const _makeSkinMesh = () => {
+      const object = {};
+      let onupdate = null;
+      object.setSkinUrl = skinUrl => {
+        if (skinUrl) {
+          return fetch(skinUrl)
+            .then(res => {
+              if (res.ok) {
+                return Promise.resolve(res);
+              } else {
+                return Promise.reject(new Error('invalid status code: ' + res.status));
+              }
+            })
+            .then(res => {
+              const {headers} = res;
+              const type = headers.get('content-type');
 
-      const uniforms = THREE.UniformsUtils.clone(skin.SKIN_SHADER.uniforms);
+              if (/^image\//.test(type)) {
+                console.log('set image skin', skinUrl);
 
-      const handMeshes = Array(2);
-      for (let i = 0; i < handMeshes.length; i++) {
-        const handMesh = _makeHandMesh();
-        scene.add(handMesh);
-        handMeshes[i] = handMesh;
-      }
-      mesh.handMeshes = handMeshes;
+                const mesh = skin({
+                  limbs: true,
+                });
 
-      mesh.onBeforeRender = (function(onBeforeRender) {
-        return function() {
-          mesh.material.uniforms.headRotation.value.copy(uniforms.headRotation.value);
-          mesh.material.uniforms.leftArmRotation.value.copy(uniforms.leftArmRotation.value);
-          mesh.material.uniforms.rightArmRotation.value.copy(uniforms.rightArmRotation.value);
-          mesh.material.uniforms.theta.value = uniforms.theta.value;
-          mesh.material.uniforms.headVisible.value = uniforms.headVisible.value;
-          mesh.material.uniforms.hit.value = uniforms.hit.value;
+                const uniforms = THREE.UniformsUtils.clone(skin.SKIN_SHADER.uniforms);
 
-          onBeforeRender.apply(this, arguments);
-        };
-      })(mesh.onBeforeRender);
+                /* const handMeshes = Array(2);
+                for (let i = 0; i < handMeshes.length; i++) {
+                  const handMesh = _makeHandMesh();
+                  scene.add(handMesh);
+                  handMeshes[i] = handMesh;
+                }
+                mesh.handMeshes = handMeshes; */
 
-      playerMesh.onupdate = () => {
-        const hmdEuler = localEuler.setFromQuaternion(playerMesh.hmd.quaternion, camera.rotation.order);
-        const playerEuler = localEuler2.setFromQuaternion(mesh.quaternion, camera.rotation.order);
-        const angleDiff = _angleDiff(hmdEuler.y, playerEuler.y);
-        const angleDiffAbs = Math.abs(angleDiff);
-        if (angleDiffAbs > Math.PI / 2) {
-          playerEuler.y += (angleDiffAbs - (Math.PI / 2)) * (angleDiff < 0 ? 1 : -1);
-          mesh.quaternion.setFromEuler(playerEuler);
-        }
+                mesh.onBeforeRender = (onBeforeRender => function() {
+                  mesh.material.uniforms.headRotation.value.copy(uniforms.headRotation.value);
+                  mesh.material.uniforms.leftArmRotation.value.copy(uniforms.leftArmRotation.value);
+                  mesh.material.uniforms.rightArmRotation.value.copy(uniforms.rightArmRotation.value);
+                  mesh.material.uniforms.theta.value = uniforms.theta.value;
+                  mesh.material.uniforms.headVisible.value = uniforms.headVisible.value;
+                  mesh.material.uniforms.hit.value = uniforms.hit.value;
 
-        mesh.position.copy(playerMesh.hmd.position)
-          .sub(mesh.eye.getWorldPosition(localVector))
-          .add(mesh.getWorldPosition(localVector));
+                  onBeforeRender.apply(this, arguments);
+                })(mesh.onBeforeRender);
 
-        const playerQuaternionInverse = localQuaternion.copy(mesh.quaternion).inverse();
-        mesh.head.quaternion.copy(playerQuaternionInverse).multiply(playerMesh.hmd.quaternion);
-        mesh.updateMatrixWorld();
+                return new Promise((accept, reject) => {
+                  const skinImg = new Image();
+                  skinImg.crossOrigin = 'Anonymous';
+                  skinImg.src = skinUrl;
+                  skinImg.onload = () => {
+                    accept(skinImg);
+                  };
+                  skinImg.onerror = err => {
+                    reject(err);
+                  };
+                })
+                  .then(skinImg => {
+                    mesh.setImage(skinImg);
 
-        uniforms.headRotation.value.copy(mesh.head.quaternion).inverse();
+                    onupdate = (hmd, gamepads) => {
+                      const hmdEuler = localEuler.setFromQuaternion(hmd.quaternion, localEuler.order);
+                      const playerEuler = localEuler2.setFromQuaternion(mesh.quaternion, localEuler2.order);
+                      const angleDiff = _angleDiff(hmdEuler.y, playerEuler.y);
+                      const angleDiffAbs = Math.abs(angleDiff);
+                      if (angleDiffAbs > Math.PI / 2) {
+                        playerEuler.y += (angleDiffAbs - (Math.PI / 2)) * (angleDiff < 0 ? 1 : -1);
+                        mesh.quaternion.setFromEuler(playerEuler);
+                      }
 
-        for (let i = 0; i < 2; i++) {
-          const side = SIDES[i];
-          const armRotation = uniforms[side === 'left' ? 'leftArmRotation' : 'rightArmRotation'];
+                      const oldWorldPosition = mesh.getWorldPosition(localVector);
+                      mesh.position.copy(hmd.position)
+                        .sub(mesh.eye.getWorldPosition(localVector2))
+                        .add(oldWorldPosition);
 
-          const gamepad = playerMesh.gamepads[i];
-          if (gamepad.visible) {
-            armRotation.value.setFromRotationMatrix(
-              localMatrix.lookAt(
-                mesh.arms[side].getWorldPosition(localVector),
-                gamepad.position,
-                localVector2.copy(upVector).applyQuaternion(gamepad.quaternion)
-              )
-            )
-              .multiply(armQuaternionOffset)
-              .premultiply(playerQuaternionInverse)
-              .inverse();
-          } else {
-            armRotation.value.set(0, 0, 0, 1);
+                      const playerQuaternionInverse = localQuaternion.copy(mesh.quaternion).inverse();
+                      mesh.head.quaternion.copy(playerQuaternionInverse).multiply(hmd.quaternion);
+                      mesh.updateMatrixWorld();
+
+                      const headQuaternionInverse = localQuaternion2.copy(mesh.head.quaternion).inverse();
+                      uniforms.headRotation.value.set(headQuaternionInverse.x, headQuaternionInverse.y, headQuaternionInverse.z, headQuaternionInverse.w);
+
+                      for (let i = 0; i < 2; i++) {
+                        const side = SIDES[i];
+                        const armRotation = uniforms[side === 'left' ? 'leftArmRotation' : 'rightArmRotation'];
+
+                        const gamepad = gamepads[i];
+                        if (gamepad.visible) {
+                          const armQuaternionInverse = localQuaternion2.setFromRotationMatrix(
+                            localMatrix.lookAt(
+                              mesh.arms[side].getWorldPosition(localVector),
+                              gamepad.position,
+                              localVector2.copy(upVector).applyQuaternion(gamepad.quaternion)
+                            )
+                          )
+                            .multiply(armQuaternionOffset)
+                            .premultiply(playerQuaternionInverse)
+                            .inverse();
+                          armRotation.value.set(armQuaternionInverse.x, armQuaternionInverse.y, armQuaternionInverse.z, armQuaternionInverse.w);
+                        } else {
+                          armRotation.value.set(0, 0, 0, 1);
+                        }
+                      }
+
+                      /* for (let i = 0; i < handMeshes.length; i++) { // XXX
+                        handMeshes[i].updatePlayerMatrix(playerMatrix.hands[i]);
+                      } */
+                    };
+
+                    if (object.skinMesh) {
+                      object.skinMesh.parent.remove(object.skinMesh);
+                    }
+
+                    scene.add(mesh);
+                    object.skinMesh = mesh;
+                  });
+              } else if (type === 'application/x-tar') {
+                console.log('set model skin', skinUrl);
+
+                return res.arrayBuffer()
+                  .then(arrayBuffer => untar(arrayBuffer))
+                  .then(files => {
+                    const fbxFile = files.find(file => /\.fbx/.test(file.name));
+
+                    if (fbxFile) {
+                      const directoryUrl = fetchManager.addDirectory(files);
+                      const fbxFileUrl = directoryUrl + '/' + fbxFile.name;
+
+                      return THREE.Model.FBX(fbxFileUrl)
+                        .then(mesh => {
+                          mesh.setHeight(DEFAULT_USER_HEIGHT);
+
+                          onupdate = (hmd, gamepads) => {
+                            mesh.update(hmd, gamepads);
+                          };
+
+                          if (object.skinMesh) {
+                            object.skinMesh.parent.remove(object.skinMesh);
+                          }
+
+                          scene.add(mesh);
+                          object.skinMesh = mesh;
+                        })
+                        .catch(err => {
+                          console.warn(err.stack);
+                        });
+                    } else {
+                      return Promise.reject(new Error('could not find model file in bundle'));
+                    }
+                  });
+              } else {
+                return Promise.reject(new Error('cannot open unknown file type: ' + JSON.stringify(type)));
+              }
+            });
+        } else {
+          onupdate = null;
+
+          if (object.skinMesh) {
+            object.skinMesh.parent.remove(object.skinMesh);
+            object.skinMesh = null;
           }
         }
-
-        /* for (let i = 0; i < handMeshes.length; i++) { // XXX
-          handMeshes[i].updatePlayerMatrix(playerMatrix.hands[i]);
-        } */
       };
-
-      const _setSkin = skinUrl => {
-        skinUrl = skinUrl || DEFAULT_SKIN_URL;
-
-        return fetch(skinUrl)
-          .then(res => {
-            if (res.ok) {
-              return res.arrayBuffer()
-                .then(arrayBuffer => ({
-                  type: res.headers.get('content-type'),
-                  arrayBuffer,
-                }));
-            } else {
-              return Promise.reject(new Error('invalid status code: ' + res.status));
-            }
-          })
-          .then(({type, arrayBuffer}) => {
-            if (/^image\//.test(type)) {
-              return new Promise((accept, reject) => {
-                const skinImg = new Image();
-                skinImg.crossOrigin = 'Anonymous';
-                skinImg.src = skinUrl;
-                skinImg.onload = () => {
-                  mesh.setImage(skinImg);
-
-                  accept();
-                };
-                skinImg.onerror = err => {
-                  reject(err);
-                };
-              });
-            } else if (type === 'application/x-tar') {
-              return untar(arrayBuffer)
-                .then(files => {
-                  const fbxFile = files.find(file => /\.fbx/.test(file.name));
-
-                  if (fbxFile) {
-                    const directoryUrl = fetchManager.addDirectory(files);
-                    const fbxFileUrl = directoryUrl + '/' + fbxFile.name;
-
-                    return THREE.Model.FBX(fbxFileUrl)
-                      .then(object => {
-                        object.position.copy(placementPosition);
-                        scene.add(object);
-
-                        const fn = object.bindAvatar(camera, controllerMeshes[0], controllerMeshes[1], DEFAULT_USER_HEIGHT);
-                        animations.push(fn);
-                      });
-                  } else {
-                    return Promise.reject(new Error('no model found in tar:' + skinUrl));
-                  }
-                });
-            } else {
-              return Promise.reject(new Error('invalid skin type: ' + type));
-            }
-          })
-          .catch(err => {
-            console.warn(err.stack);
-          });
+      object.update = (hmd, gamepads) => {
+        onupdate && onupdate(hmd, gamepads);
       };
-      mesh.setSkin = _setSkin;
-
-      (() => {
-        const {username} = (playerMesh.player.state._exokit || {});
-        if (username) {
-          return xrid.get('_exokit.skin', {
-            user: username,
-            format: 'text',
-          });
-        } else {
-          return Promise.resolve(null);
-        }
-      })()
-        .then(_setSkin)
-        .catch(err => {
-          console.warn(err.stack);
-        });
-
-      return mesh;
+      object.skinMesh = null;
+      return object;
     };
+
+    const localSkinMesh = _makeSkinMesh();
+    animations.push(() => {
+      localSkinMesh.update(camera, controllerMeshes);
+    });
 
     const _requestSpriteMesh = itemType => new Promise((accept, reject) => {
       const img = new Image();
@@ -1930,71 +1970,23 @@
               const {file} = grabbedObject;
 
               if (_isIdOpen()) {
-                const placementPosition = controllerMesh.position.clone();
-
-                fetch(file.url)
-                  .then(res => {
-                    if (res.ok) {
-                      return Promise.resolve(res);
-                    } else {
-                      return Promise.reject(new Error('invalid status code: ' + res.status));
-                    }
-                  })
-                  .then(res => {
-                    const {headers} = res;
-                    const type = headers.get('content-type');
-
-                    if (/^image\//.test(type)) {
-                      console.log('set image skin', file.url);
-
-                      return Promise.all([
-                        _requestSkinPreviewCanvas(file.url)
-                          .then(canvas => {
-                            skinPreviewCanvas = canvas;
-
-                            menuMesh.urlMesh.updateText();
-                          }),
-                        xrid.set('_exokit.skin', file.url)
-                          .then(() => {
-                            if (_isMpOpen()) {
-                              return xrmp.localPlayerMesh.player.setState({
-                                username: xrid.user.username,
-                              });
-                            }
-                          }),
-                      ])
-                        .then(() => {});
-                    } else if (type === 'application/x-tar') {
-                      console.log('set model skin', file.url);
-
-                      return res.arrayBuffer()
-                        .then(arrayBuffer => untar(arrayBuffer))
-                        .then(files => {
-                          const fbxFile = files.find(file => /\.fbx/.test(file.name));
-
-                          if (fbxFile) {
-                            const directoryUrl = fetchManager.addDirectory(files);
-                            const fbxFileUrl = directoryUrl + '/' + fbxFile.name;
-
-                            return THREE.Model.FBX(fbxFileUrl)
-                              .then(object => {
-                                object.position.copy(placementPosition);
-                                scene.add(object);
-
-                                const fn = object.bindAvatar(camera, controllerMeshes[0], controllerMeshes[1], DEFAULT_USER_HEIGHT);
-                                animations.push(fn);
-                              })
-                              .catch(err => {
-                                console.warn(err.stack);
-                              });
-                          } else {
-                            return Promise.reject(new Error('could not find model file in bundle'));
-                          }
+                Promise.all([
+                  xrid.set('_exokit.skin', file.url)
+                    .then(() => {
+                      if (_isMpOpen()) {
+                        return xrmp.localPlayerMesh.player.setState({
+                          username: xrid.user.username,
                         });
-                    } else {
-                      console.warn('cannot open unknown file type', {type});
-                    }
-                  })
+                      }
+                    }),
+                  localSkinMesh.setSkinUrl(file.url),
+                  /* _requestSkinPreviewCanvas(file.url)
+                    .then(canvas => {
+                      skinPreviewCanvas = canvas;
+
+                      menuMesh.urlMesh.updateText();
+                    }), */
+                ])
                   .catch(err => {
                     console.warn(err);
                   });
