Set default player skin on player enter

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 skinMesh.setSkinUrl(skinUrl);
               });
           } else {
-            skinMesh.setSkinUrl(null);
+            skinMesh.setSkinUrl(DEFAULT_SKIN_URL);
           }
           console.log('player state update', {state}); // XXX set the skin here
         };
