Destroy local skin mesh when logging out of xrid

--- a/index.html
+++ b/index.html
@@ -395,6 +395,8 @@
       user = null;
 
       menuMesh.urlMesh.updateText();
+
+      localSkinMesh.destroy();
     };
 
     canvas.width = window.innerWidth;
